# cluster-computing-up

./: .gitignore
blatt2/: Makefile  mmul.c
blatt2/aufgabe_2_2/: 2.2b_strace_mmul
blatt2/aufgabe_2_3/: CMakeLists.txt  Makefile  Plot Results.ipynb  affine_montecarlo_pi.c  create_result_csv.py  montecarlo_pi.c  random.h  run_benchmark_on_pbs.sh  test_consistency.sh
blatt2/aufgabe_2_3/aufgabe-2-3-ef_zuse-results/: consistency_results_affine_montecarlo_pi.txt
blatt2/aufgabe_2_3/zuse_results/: consistency_results_montecarlo_pi.txt
blatt3/aufgabe_3_1/: CMakeLists.txt  Makefile  omp_consistency_test.txt  omp_montecarlo_pi.c
blatt3/aufgabe_3_2/: pseudocode.cpp
blatt3/aufgabe_3_3/caseq/: Makefile  omp_caseq.c
blatt4/aufgabe_4_2/: omp_critical_montecarlo_pi.c
blatt4/aufgabe_4_3/: Makefile  omp_parallel_procon.c  omp_sec_procon.c  procon.c  run_benchmark.sh
blatt5/aufgabe_5_2/: CMakeLists.txt  Makefile  Plot Results.ipynb  benchmark.sh  montecarlo_pi  montecarlo_pi.c  omp_montecarlo_pi  omp_montecarlo_pi.c  random.h  timing_utils.c  timing_utils.h
blatt5/aufgabe_5_3/: Makefile  benchmark.sh  montecarlo_pi  montecarlo_pi.c  omp_montecarlo_pi  omp_montecarlo_pi.c  run_benchmark_on_pbs.sh  timing_utils.h
uebung1/aufgabe_1_1_2/: list_node_hostnames.sh  list_node_hostnames.sh.o913756
